website/versioned_docs/version-2.13.x/reference/subsystems/download-terraform.mdx
---
title: download-terraform
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Terraform (https://terraform.io)

Backend: <span className="color--primary">`pants.backend.experimental.terraform`</span>

Config section: <span className="color--primary">`[download-terraform]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--download-terraform-version=<str>`}
  env_repr="PANTS_DOWNLOAD_TERRAFORM_VERSION"
  default_repr={`1.0.7`}
>

Use this version of terraform.

</Option>

### `known_versions`

<Option
  cli_repr={`--download-terraform-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_DOWNLOAD_TERRAFORM_KNOWN_VERSIONS'
  default_repr={`[\n  "1.0.7|macos_arm64 |cbab9aca5bc4e604565697355eed185bb699733811374761b92000cc188a7725|32071346",\n  "1.0.7|macos_x86_64|80ae021d6143c7f7cbf4571f65595d154561a2a25fd934b7a8ccc1ebf3014b9b|33020029",\n  "1.0.7|linux_x86_64|bc79e47649e2529049a356f9e60e06b47462bf6743534a10a4c16594f443be7b|32671441"\n]`}
>

Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

```
- `version` is the version string
- `platform` is one of [linux_arm64,linux_x86_64,macos_arm64,macos_x86_64],
- `sha256` is the 64-character hex representation of the expected sha256
digest of the download file, as emitted by `shasum -a 256`
- `length` is the expected length of the download file in bytes, as emitted by
`wc -c`
```

E.g., `3.1.2|macos_x86_64|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `use_unsupported_version`

<Option
  cli_repr={`--download-terraform-use-unsupported-version=<UnsupportedVersionUsage>`}
  env_repr='PANTS_DOWNLOAD_TERRAFORM_USE_UNSUPPORTED_VERSION'
  one_of='error, warning'
  default_repr={`error`}
>

What action to take in case the requested version of terraform is not supported.

Supported terraform versions: unspecified

</Option>

### `url_template`

<Option
  cli_repr={`--download-terraform-url-template=<str>`}
  env_repr='PANTS_DOWNLOAD_TERRAFORM_URL_TEMPLATE'
  default_repr={`https://releases.hashicorp.com/terraform/{version}/terraform_{version}_{platform}.zip`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a `file:$abspath` URL (e.g. `file:/this/is/absolute`, possibly by [templating the buildroot in a config file](https://www.pantsbuild.org/v2.13/docs/options#config-file-entries)).

Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--download-terraform-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_DOWNLOAD_TERRAFORM_URL_PLATFORM_MAPPING'
  default_repr={`{\n  "linux_x86_64": "linux_amd64",\n  "macos_arm64": "darwin_arm64",\n  "macos_x86_64": "darwin_amd64"\n}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"macos_x86_64": "apple-darwin", "linux_x86_64": "unknown-linux"}`, and run Pants on Linux with an intel architecture, then `{platform}` will be substituted in the --url-template option with unknown-linux.

</Option>

### `tailor`

<Option
  cli_repr={`--[no-]download-terraform-tailor`}
  env_repr="PANTS_DOWNLOAD_TERRAFORM_TAILOR"
  default_repr={`True`}
>

If true, add `terraform_module` targets with the `tailor` goal.

</Option>

## Deprecated options

None

</span>
